@@ -1,4 +1,4 @@
-VERSION=0.77.1-20050910
+VERSION=0.77.1-20050916
 THISDIR=branch_0
 
 TOOLSPREFIX=
@@ -15,7 +15,7 @@ AS=$(TOOLSPREFIX)as
 
 export CC CPP AR AS LOCALINC LOCALLIB
 
-.PHONY: choosetarget pentium2 pentium3 pentium4 athlon x86_64 x86_32 \
+.PHONY: choosetarget pentium2 pentium3 pentium4 athlon x86_64 nocona x86_32 \
         ppc_970 ppc_7450 doc x86common common clean snapshot test
 
 choosetarget :
@@ -26,6 +26,7 @@ choosetarget :
 	@echo "	pentium-m              	 Intel Pentium M"
 	@echo "	athlon			 AMD Athlon (k7)"
 	@echo "	x86_64                   AMD Opteron/Athlon64 (k8)"
+	@echo "	nocona                   Intel 64-bit-capable Xeon/Pentium"
 	@echo "	ppc_970             	 PowerPC 970"
 	@echo "	ppc_7450             	 PowerPC 7450"
 	@echo "	doc			 Documentation"
@@ -50,6 +51,9 @@ athlon :
 
 x86_64 :
 	@ARCH="k8" $(MAKE) common
+
+nocona :
+	@ARCH="nocona" $(MAKE) common
 
 x86_32 :
 	@ARCH="athlon" $(MAKE) common
